[gd_scene load_steps=2 format=3 uid="uid://djx2thkvj7vih"]

[ext_resource type="Script" path="res://scripts/components/projectile_components.gd" id="1_sevhp"]

[node name="ProjectileComponents" type="Node2D"]
script = ExtResource("1_sevhp")
direction = Vector2(1, 0)
hitbox = NodePath("Hitbox")

[node name="Hitbox" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]

[node name="LifeTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
